homework_02/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-app
  name: my-service
  namespace: my-ns
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: my-app
